--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 /* Halfomania Font - Fallback to Audiowide if not available */
 @font-face {
   font-family: 'Halfomania-Regular';
-  src: url('/fonts/Halfomania-Regular.ttf') format('truetype');
+  src: url('/fonts/HALFOMANIA-REGULAR.TTF') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
